first commit on submodule theme

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html{{ with .Site.LanguageCode }} lang="{{ . }}"{{ end }}>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     {{ partial "head.html" . }}
+    {{ partial "resources-css-in-header.html" . }}
+    {{ partial "s9-widget-in-header.html" . }}
   </head>
   <body class="article">
     {{ partial "header.html" . }}
