--- a/layouts/partials/head-meta.html
+++ b/layouts/partials/head-meta.html
@@ -1,1 +1,4 @@
 {{/* Add additional meta tags here */}}
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name=msapplication-TileColor content="#ffffd8" />
+<meta name=theme-color content="#ffffd8" />
